--- a/src/directives/side-bar/side-bar.component.html
+++ b/src/directives/side-bar/side-bar.component.html
@@ -12,8 +12,8 @@
             </span>
         </a>
         <ul class="treeview-menu">
-          <li><a href="../../index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-          <li><a href="../../index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+          <li><a href="javascript:void(0);"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+          <li><a href="javascript:void(0);"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
         </ul>
       </li>
       <li class="treeview active">
@@ -25,14 +25,14 @@
             </span>
         </a>
         <ul class="treeview-menu">
-          <li><a href="../layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-          <li><a href="../layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
-          <li class="active"><a href="../layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
-          <li><a href="collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
+          <li><a href="javascript:void(0);"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
+          <li><a href="javascript:void(0);"><i class="fa fa-circle-o"></i> Boxed</a></li>
+          <li class="active"><a href="javascript:void(0);"><i class="fa fa-circle-o"></i> Fixed</a></li>
+          <li><a href="javascript:void(0);"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
         </ul>
       </li>
       <li>
-        <a href="../widgets.html">
+        <a href="javascript:void(0);">
           <i class="fa fa-th"></i> <span>Widgets</span>
           <span class="pull-right-container">
               <small class="label pull-right bg-green">new</small>
